fixed spacing for larger screens and added design banners

--- a/src/style.css
+++ b/src/style.css
@@ -156,7 +156,7 @@ li {
 }
 .main-contact-section img {
   display: block;
-  margin: auto 0;
+  margin: auto;
 }
 .contact-content {
   text-align: center;
